hphp/hack/test/typecheck/shape/disable_optional_and_unknown_shape_fields/shape_idx3.php.exp
File "shape_idx3.php", line 14, characters 3-28:
  ^(arraykey | int)
File "shape_idx3.php", line 15, characters 3-28:
  ^(int | arraykey)
File "shape_idx3.php", line 16, characters 3-36:
  ?^(int | arraykey)
File "shape_idx3.php", line 17, characters 3-36:
  ?^(arraykey | int)
File "shape_idx3.php", line 21, characters 10-34:
Invalid return type (Typing[4110])
File "shape_idx3.php", line 13, characters 4-6:
This is an int
File "hhi_lib__srcs/Shapes.hhi", line 33, characters 26-28:
It is incompatible with a nullable type
